--- a/index.html
+++ b/index.html
@@ -22,15 +22,17 @@
   <main class="main">
 
     <section class="hero">
-      <div class="container">
+      <div class="container hero__container">
+       <div class="hero__content">
         <h1 class="hero__title">Best pizza in &nbsp; the city</h1>
         <p class="hero__tagline">We will deliver in less than &nbsp;an hour</p>
         <button class="hero__order">Order pizza</button>
+       </div>
       </div>
     </section>
 
     <section class="toppings">
-      <div class="container">
+      <div class="container hero__toppings">
         <h2 class="toppings__title">Select topping:</h2>
 
         <ul class="toppings__list">
