--- a/index.html
+++ b/index.html
@@ -37,64 +37,52 @@
 
         <ul class="toppings__list">
           <li class="toppings__item">
-            <label class="toppings__label">
-              <input class="toppings__checkbox" name="topping" type="checkbox">Hard cheese
-            </label>
+              <input class="toppings__checkbox" name="topping" type="checkbox">
+              <label class="toppings__label">Hard cheese</label>
           </li>
           <li class="toppings__item">
-            <label class="toppings__label">
-              <input class="toppings__checkbox" name="topping" type="checkbox">Mozzarella
-            </label>
+              <input class="toppings__checkbox" name="topping" type="checkbox">
+              <label class="toppings__label">Mozzarella</label>
           </li>
           <li class="toppings__item">
-            <label class="toppings__label">
-              <input class="toppings__checkbox" name="topping" type="checkbox">Blue cheese
-            </label>
+              <input class="toppings__checkbox" name="topping" type="checkbox">
+              <label class="toppings__label">Blue cheese</label>
           </li>
           <li class="toppings__item">
-            <label class="toppings__label">
-              <input class="toppings__checkbox" name="topping" type="checkbox">Pepperoni
-            </label>
+              <input class="toppings__checkbox" name="topping" type="checkbox">
+              <label class="toppings__label">Pepperoni</label>
           </li>
           <li class="toppings__item">
-            <label class="toppings__label">
-              <input class="toppings__checkbox" name="topping" type="checkbox">Ham
-            </label>
+              <input class="toppings__checkbox" name="topping" type="checkbox">
+              <label class="toppings__label">Ham</label>
           </li>
           <li class="toppings__item">
-            <label class="toppings__label">
-              <input class="toppings__checkbox" name="topping" type="checkbox">Chicken
-            </label>
+              <input class="toppings__checkbox" name="topping" type="checkbox">
+              <label class="toppings__label">Chicken</label>
           </li>
           <li class="toppings__item">
-            <label class="toppings__label">
-              <input class="toppings__checkbox" name="topping" type="checkbox">Shrimps
-            </label>
+              <input class="toppings__checkbox" name="topping" type="checkbox">
+              <label class="toppings__label">Shrimps</label>
           </li>
           <li class="toppings__item">
-            <label class="toppings__label">
-              <input class="toppings__checkbox" name="topping" type="checkbox">Tomato
-            </label>
+              <input class="toppings__checkbox" name="topping" type="checkbox">
+              <label class="toppings__label">Tomato</label>
           </li>
           <li class="toppings__item">
-            <label class="toppings__label">
-              <input class="toppings__checkbox" name="topping" type="checkbox">Bell pepper
-            </label>
+              <input class="toppings__checkbox" name="topping" type="checkbox">
+              <label class="toppings__label">Bell pepper</label>
           </li>
           <li class="toppings__item">
-            <label class="toppings__label">
-              <input class="toppings__checkbox" name="topping" type="checkbox">A pineapple
-            </label>
+              <input class="toppings__checkbox" name="topping" type="checkbox">
+              <label class="toppings__label">A pineapple</label>
           </li>
           <li class="toppings__item">
-            <label class="toppings__label">
-              <input class="toppings__checkbox" name="topping" type="checkbox">Onion
-            </label>
+              <input class="toppings__checkbox" name="topping" type="checkbox">
+              <label class="toppings__label">Onion</label>
           </li>
           <li class="toppings__item">
-            <label class="toppings__label">
-              <input class="toppings__checkbox" name="topping" type="checkbox">Mushrooms
-            </label>
+              <input class="toppings__checkbox" name="topping" type="checkbox">
+              <label class="toppings__label">Mushrooms</label>
           </li>
         </ul>
       </div>
