--- a/index.html
+++ b/index.html
@@ -37,52 +37,52 @@
 
         <ul class="toppings__list">
           <li class="toppings__item">
-              <input class="toppings__checkbox" name="topping" type="checkbox">
-              <label class="toppings__label">Hard cheese</label>
+              <input class="toppings__checkbox" id="1" name="topping" type="checkbox" value="Hard cheese">
+              <label class="toppings__label" for="1">Hard cheese</label>
           </li>
           <li class="toppings__item">
-              <input class="toppings__checkbox" name="topping" type="checkbox">
-              <label class="toppings__label">Mozzarella</label>
+              <input class="toppings__checkbox" id="2" name="topping" type="checkbox" value="Mozzarella">
+              <label class="toppings__label for="2">Mozzarella</label>
           </li>
           <li class="toppings__item">
-              <input class="toppings__checkbox" name="topping" type="checkbox">
-              <label class="toppings__label">Blue cheese</label>
+              <input class="toppings__checkbox" id="3" name="topping" type="checkbox" value="Blue cheese">
+              <label class="toppings__label" for="3">Blue cheese</label>
           </li>
           <li class="toppings__item">
-              <input class="toppings__checkbox" name="topping" type="checkbox">
-              <label class="toppings__label">Pepperoni</label>
+              <input class="toppings__checkbox" id="4" name="topping" type="checkbox" value="Pepperoni">
+              <label class="toppings__label" for="4">Pepperoni</label>
           </li>
           <li class="toppings__item">
-              <input class="toppings__checkbox" name="topping" type="checkbox">
-              <label class="toppings__label">Ham</label>
+              <input class="toppings__checkbox" id="5" name="topping" type="checkbox" value="Ham">
+              <label class="toppings__label" for="5">Ham</label>
           </li>
           <li class="toppings__item">
-              <input class="toppings__checkbox" name="topping" type="checkbox">
-              <label class="toppings__label">Chicken</label>
+              <input class="toppings__checkbox" id="6" name="topping" type="checkbox" value="Chicken">
+              <label class="toppings__label" for="6">Chicken</label>
           </li>
           <li class="toppings__item">
-              <input class="toppings__checkbox" name="topping" type="checkbox">
-              <label class="toppings__label">Shrimps</label>
+              <input class="toppings__checkbox" id="7" name="topping" type="checkbox" value="Shrimps">
+              <label class="toppings__label" for="7">Shrimps</label>
           </li>
           <li class="toppings__item">
-              <input class="toppings__checkbox" name="topping" type="checkbox">
-              <label class="toppings__label">Tomato</label>
+              <input class="toppings__checkbox" id="8" name="topping" type="checkbox" value="Tomato">
+              <label class="toppings__label" for="8">Tomato</label>
           </li>
           <li class="toppings__item">
-              <input class="toppings__checkbox" name="topping" type="checkbox">
-              <label class="toppings__label">Bell pepper</label>
+              <input class="toppings__checkbox" id="9" name="topping" type="checkbox" value="Bell pepper">
+              <label class="toppings__label" for="9">Bell pepper</label>
           </li>
           <li class="toppings__item">
-              <input class="toppings__checkbox" name="topping" type="checkbox">
-              <label class="toppings__label">A pineapple</label>
+              <input class="toppings__checkbox" id="10" name="topping" type="checkbox" value="A pineapple">
+              <label class="toppings__label" for="10">A pineapple</label>
           </li>
           <li class="toppings__item">
-              <input class="toppings__checkbox" name="topping" type="checkbox">
-              <label class="toppings__label">Onion</label>
+              <input class="toppings__checkbox" id="11" name="topping" type="checkbox" value="Onion">
+              <label class="toppings__label" for="11">Onion</label>
           </li>
           <li class="toppings__item">
-              <input class="toppings__checkbox" name="topping" type="checkbox">
-              <label class="toppings__label">Mushrooms</label>
+              <input class="toppings__checkbox" id="12" name="topping" type="checkbox" value="Mushrooms id="1"">
+              <label class="toppings__label for="12">Mushrooms</label>
           </li>
         </ul>
       </div>
