--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
       <div class="container hero__toppings">
         <h2 class="toppings__title">Select topping:</h2>
 
+        <button class="toppings__close">
+            <span>Select topping</span>
+            <svg class="toppings__close-icon" width="12" height="10" viewBox="0 0 12 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M6 9.5L11.1962 0.5H0.803848L6 9.5Z" fill="#2C2826"/>
+                </svg>                
+        </button>
+
         <ul class="toppings__list">
           <li class="toppings__item">
               <input class="toppings__checkbox" id="1" name="topping" type="checkbox" value="Hard cheese">
@@ -97,7 +104,8 @@
             <article class="card">
               <img class="card__image" src="img/pizza-margherita.png" alt="Маргарита">
 
-              <h3 class="card__title">Margarita</h3>
+              <div class="card__content">
+                <h3 class="card__title">Margarita</h3>
 
               <p class="card__info">
                 <span class="card__price">480 zl</span>
@@ -106,13 +114,15 @@
               </p>
 
               <button class="card__button">Choose</button>
+              </div>
             </article>
           </li>
           <li class="pizza__item">
             <article class="card">
               <img class="card__image" src="img/pizza-pepperoni.png" alt="Пепперони">
 
-              <h3 class="card__title">Pepperoni</h3>
+              <div class="card__content">
+                <h3 class="card__title">Pepperoni</h3>
 
               <p class="card__info">
                 <span class="card__price">550 zl</span>
@@ -121,81 +131,92 @@
               </p>
 
               <button class="card__button">Choose</button>
+              </div>
             </article>
           </li>
           <li class="pizza__item">
             <article class="card">
               <img class="card__image" src="img/pizza-with-shrimps.png" alt="Морская">
 
-              <h3 class="card__title">Marine</h3>
+             <div class="card__content">
+                <h3 class="card__title">Marine</h3>
 
-              <p class="card__info">
-                <span class="card__price">590 zl</span>
-                <span>/</span>
-                <span class="card__weight">25 cm</span>
-              </p>
-
-              <button class="card__button">Choose</button>
+                <p class="card__info">
+                  <span class="card__price">590 zl</span>
+                  <span>/</span>
+                  <span class="card__weight">25 cm</span>
+                </p>
+  
+                <button class="card__button">Choose</button>
+             </div>
             </article>
           </li>
           <li class="pizza__item">
             <article class="card">
               <img class="card__image" src="img/pizza-only-cheese.png" alt="Четыре сыра">
 
-              <h3 class="card__title">Four cheeses</h3>
+             <div class="card__content">
+                <h3 class="card__title">Four cheeses</h3>
 
-              <p class="card__info">
-                <span class="card__price">520 zl</span>
-                <span>/</span>
-                <span class="card__weight">25 сn</span>
-              </p>
-
-              <button class="card__button">Choose</button>
+                <p class="card__info">
+                  <span class="card__price">520 zl</span>
+                  <span>/</span>
+                  <span class="card__weight">25 сm</span>
+                </p>
+  
+                <button class="card__button">Choose</button>
+             </div>
             </article>
           </li>
           <li class="pizza__item">
             <article class="card">
               <img class="card__image" src="img/pizza-capricciosa.png" alt="Капричиоза">
 
-              <h3 class="card__title">Капричиоза</h3>
+              <div class="card__content">
+                <h3 class="card__title">Capriciosa</h3>
 
               <p class="card__info">
-                <span class="card__price">530 ₽</span>
+                <span class="card__price">530 zl</span>
                 <span>/</span>
-                <span class="card__weight">25 см</span>
+                <span class="card__weight">25 сm</span>
               </p>
 
-              <button class="card__button">Выбрать</button>
+              <button class="card__button">Choose</button>
+              </div>
             </article>
           </li>
           <li class="pizza__item">
             <article class="card">
               <img class="card__image" src="img/pizza-with-mushrooms.png" alt="С грибами">
 
-              <h3 class="card__title">С грибами</h3>
+            <div class="card__content">
+                <h3 class="card__title">With mushrooms</h3>
 
-              <p class="card__info">
-                <span class="card__price">490 ₽</span>
-                <span>/</span>
-                <span class="card__weight">25 см</span>
-              </p>
-
-              <button class="card__button">Выбрать</button>
+                <p class="card__info">
+                  <span class="card__price">490 zl</span>
+                  <span>/</span>
+                  <span class="card__weight">25 сm</span>
+                </p>
+  
+                <button class="card__button">Choose</button>
+            </div>
             </article>
           </li>
           <li class="pizza__item">
             <article class="card">
               <img class="card__image" src="img/pizza-with-bacon.png" alt="С ветчиной">
 
-              <h3 class="card__title">С ветчиной</h3>
+              <div class="card__content">
+                <h3 class="card__title">With meats</h3>
 
               <p class="card__info">
-                <span class="card__price">500 ₽</span>
+                <span class="card__price">500 zl</span>
                 <span>/</span>
-                <span class="card__weight">25 см</span>
+                <span class="card__weight">25 cm</span>
               </p>
 
-              <button class="card__button">Выбрать</button>
+              <button class="card__button">Choose</button>
+              </div>
             </article>
           </li>
           <li class="pizza__item">
