--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizza</title>
-    <link rel="stylesheet" href="/styles/index.css">
     <link rel="stylesheet" href="/node_modules/normalize.css/normalize.css">
     <link rel="stylesheet" href="/styles/default.css">
 </head>
@@ -24,9 +23,9 @@
     <section class="hero">
       <div class="container hero__container">
        <div class="hero__content">
-        <h1 class="hero__title">Best pizza in &nbsp; the city</h1>
-        <p class="hero__tagline">We will deliver in less than &nbsp;an hour</p>
-        <button class="hero__order">Order pizza</button>
+            <h1 class="hero__title">Best pizza in &nbsp; the city</h1>
+            <p class="hero__tagline">We will deliver in less than &nbsp;an hour</p>
+            <button class="hero__order">Order pizza</button>
        </div>
       </div>
     </section>
@@ -102,7 +101,7 @@
         <ul class="pizza__list">
           <li class="pizza__item">
             <article class="card">
-              <img class="card__image" src="img/pizza-margherita.png" alt="Маргарита">
+              <img class="card__image" src="img/Frame1.png" alt="Маргарита">
 
               <div class="card__content">
                 <h3 class="card__title">Margarita</h3>
@@ -119,7 +118,7 @@
           </li>
           <li class="pizza__item">
             <article class="card">
-              <img class="card__image" src="img/pizza-pepperoni.png" alt="Пепперони">
+              <img class="card__image" src="img/Frame2.png" alt="Пепперони">
 
               <div class="card__content">
                 <h3 class="card__title">Pepperoni</h3>
@@ -136,7 +135,7 @@
           </li>
           <li class="pizza__item">
             <article class="card">
-              <img class="card__image" src="img/pizza-with-shrimps.png" alt="Морская">
+              <img class="card__image" src="img/Frame3.png" alt="Морская">
 
              <div class="card__content">
                 <h3 class="card__title">Marine</h3>
@@ -153,7 +152,7 @@
           </li>
           <li class="pizza__item">
             <article class="card">
-              <img class="card__image" src="img/pizza-only-cheese.png" alt="Четыре сыра">
+              <img class="card__image" src="img/Frame4.png" alt="Четыре сыра">
 
              <div class="card__content">
                 <h3 class="card__title">Four cheeses</h3>
@@ -170,7 +169,7 @@
           </li>
           <li class="pizza__item">
             <article class="card">
-              <img class="card__image" src="img/pizza-capricciosa.png" alt="Капричиоза">
+              <img class="card__image" src="img/image5.png" alt="Капричиоза">
 
               <div class="card__content">
                 <h3 class="card__title">Capriciosa</h3>
@@ -187,7 +186,7 @@
           </li>
           <li class="pizza__item">
             <article class="card">
-              <img class="card__image" src="img/pizza-with-mushrooms.png" alt="С грибами">
+              <img class="card__image" src="img/image6.png" alt="С грибами">
 
             <div class="card__content">
                 <h3 class="card__title">With mushrooms</h3>
@@ -204,7 +203,7 @@
           </li>
           <li class="pizza__item">
             <article class="card">
-              <img class="card__image" src="img/pizza-with-bacon.png" alt="С ветчиной">
+              <img class="card__image" src="img/image7.png" alt="С ветчиной">
 
               <div class="card__content">
                 <h3 class="card__title">With meats</h3>
@@ -221,47 +220,53 @@
           </li>
           <li class="pizza__item">
             <article class="card">
-              <img class="card__image" src="img/pizza-with-chicken-terriyaki.png" alt="С курицей террияки">
+              <img class="card__image" src="img/image8.png" alt="С курицей террияки">
 
-              <h3 class="card__title">С курицей террияки</h3>
+              <div class="card__content">
+                <h3 class="card__title">With chicken teriyaki</h3>
 
               <p class="card__info">
-                <span class="card__price">560 ₽</span>
+                <span class="card__price">560 zl</span>
                 <span>/</span>
-                <span class="card__weight">25 см</span>
+                <span class="card__weight">25 сm</span>
               </p>
 
-              <button class="card__button">Выбрать</button>
+              <button class="card__button">Choose</button>
+              </div>
             </article>
           </li>
           <li class="pizza__item">
             <article class="card">
-              <img class="card__image" src="img/pizza-hawaiana.png" alt="Гавайская">
+              <img class="card__image" src="img/image9.png" alt="Гавайская">
 
-              <h3 class="card__title">Гавайская</h3>
+              <div class="card__content">
+                <h3 class="card__title">Hawaiian</h3>
 
               <p class="card__info">
-                <span class="card__price">530 ₽</span>
+                <span class="card__price">530 zl</span>
                 <span>/</span>
-                <span class="card__weight">25 см</span>
+                <span class="card__weight">25 сm</span>
               </p>
 
-              <button class="card__button">Выбрать</button>
+              <button class="card__button">Choose</button>
+              </div>
             </article>
           </li>
           <li class="pizza__item">
             <article class="card">
-              <img class="card__image" src="img/pizza-napoletana.png" alt="Неаполитана">
+              <img class="card__image" src="img/neopolitana.png" alt="Неаполитана">
 
-              <h3 class="card__title">Неаполитана</h3>
+              <div class="card__content">
+                <h3 class="card__title">Neapolitana</h3>
 
               <p class="card__info">
-                <span class="card__price">550 ₽</span>
+                <span class="card__price">550 zl</span>
                 <span>/</span>
-                <span class="card__weight">25 см</span>
+                <span class="card__weight">25 сm</span>
               </p>
 
-              <button class="card__button">Выбрать</button>
+              <button class="card__button">Choose</button>
+              </div>
             </article>
           </li>
 
@@ -273,14 +278,14 @@
 
   <footer class="footer">
     <div class="container">
-      <img class="footer__logo" alt="Логотип Go Go Pizza" src="./img/logo.svg" />
+      <img class="footer__logo" alt="Логотип Go Go Pizza" src="/img/footerlogo.png" />
       <p class="footer__copyright">©go go pizza, 2024</p>
       <ul class="footer__developers">
+        <!-- <li class="footer__developer">
+          <a class="footer__link" href="#" target="_blank" rel="noopener">Designer: </a>
+        </li> -->
         <li class="footer__developer">
-          <a class="footer__link" href="#" target="_blank" rel="noopener">Designer: Anastasia Ilina</a>
-        </li>
-        <li class="footer__developer">
-          <a class="footer__link" href="#" target="_blank" rel="noopener">Developer: Dmitriy Khlopov</a>
+          <a class="footer__link" href="#" target="_blank" rel="noopener">Developer: Ivan Katrenko</a>
         </li>
       </ul>
     </div>
