--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section class="hero">
       <div class="container hero__container">
        <div class="hero__content">
-            <h1 class="hero__title">Best pizza in &nbsp; the city</h1>
+            <h1 class="hero__title">Best pizza in the city</h1>
             <p class="hero__tagline">We will deliver in less than &nbsp;an hour</p>
             <button class="hero__order">Order pizza</button>
        </div>
@@ -48,7 +48,7 @@
           </li>
           <li class="toppings__item">
               <input class="toppings__checkbox" id="2" name="topping" type="checkbox" value="Mozzarella">
-              <label class="toppings__label for="2">Mozzarella</label>
+              <label class="toppings__label" for="2">Mozzarella</label>
           </li>
           <li class="toppings__item">
               <input class="toppings__checkbox" id="3" name="topping" type="checkbox" value="Blue cheese">
@@ -88,7 +88,7 @@
           </li>
           <li class="toppings__item">
               <input class="toppings__checkbox" id="12" name="topping" type="checkbox" value="Mushrooms id="1"">
-              <label class="toppings__label for="12">Mushrooms</label>
+              <label class="toppings__label" for="12">Mushrooms</label>
           </li>
         </ul>
       </div>
