--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </article>
           </li>
           <li class="pizza__item">
-            <article class="card">
+            <article class="pizza__card card">
               <img class="card__image" src="img/Frame2.png" alt="Пепперони">
 
               <div class="card__content">
@@ -290,7 +290,7 @@
       </ul>
     </div>
   </footer>
-  <script src="/js/main.js"></script>
+  <script src="/js/main.js" type="module"></script>
 </body>
 
 </html>
